--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -23,6 +23,7 @@ header {
     display: flex;
     align-items: center;
     gap: 5px;
+
     h4 {
       color: #3d3d3d;
       font-size: 1.3rem;
@@ -37,6 +38,64 @@ header {
       object-fit: contain;
     }
   }
+  .m-right {
+    height: 100%;
+    height: 2rem;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+
+    span {
+      cursor: pointer;
+      i {
+        font-size: 1.5rem;
+        color: #3d3d3d;
+      }
+    }
+    .mobile-nav {
+      position: fixed;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      width: 50%;
+      background: rgba(0, 0, 0, 0.8);
+      display: flex;
+      flex-direction: column;
+      z-index: 999;
+      padding: 1rem;
+
+      .mobile-nav-top {
+        color: #fff;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        span {
+          font-size: 1.5rem;
+          cursor: pointer;
+          i {
+            color: #fff;
+          }
+        }
+      }
+      .mobile-nav-content {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        margin-top: 1rem;
+
+        .link {
+          text-decoration: none;
+          color: #fff;
+        }
+        .link.active {
+          border-bottom: 1px solid red;
+          width: fit-content;
+          padding-bottom: 0.1rem;
+        }
+      }
+    }
+  }
+
   .right {
     display: flex;
     justify-content: flex-end;
@@ -65,6 +124,10 @@ header {
     }
     .right {
       display: none;
+    }
+    .m-right {
+      display: block;
+      display: flex;
     }
   }
 }
@@ -164,6 +227,8 @@ header {
   top: 0;
   left: 0;
   z-index: 0;
+
+  border-radius: 5px;
 
   .pulse-animation {
     width: 80px;
@@ -438,6 +503,7 @@ header {
 
 @media (max-width: 700px) {
   .category-section {
+    margin-top: 1.5rem;
     .cat-wrap {
       .cat-left {
         .cl1 {
@@ -675,6 +741,7 @@ header {
 
 @media (max-width: 700px) {
   .course-section {
+    margin-top: 1.5rem;
     .course-wrap {
       .course-left {
         .co1 {
@@ -857,6 +924,11 @@ header {
   }
 }
 
+@media (max-width: 500px) {
+  .subscribe {
+    margin-top: 1.5rem;
+  }
+}
 .rating-section {
   width: 100%;
   display: flex;
@@ -973,6 +1045,11 @@ header {
         width: 100%;
       }
     }
+  }
+}
+@media (max-width: 500px) {
+  .rating-section {
+    margin-top: 1.5rem;
   }
 }
 
@@ -1123,8 +1200,10 @@ header {
 
 @media (max-width: 600px) {
   .contact-section {
+    margin-top: 2rem;
     .contact-wrap {
       .contact-wrap-top1 {
+        margin-bottom: 2rem;
         .cl1 {
           width: 100%;
           h2 {
