--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -2074,3 +2074,208 @@ section.details {
     }
   }
 }
+
+section.dashboard {
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  .d-left {
+    width: 15%;
+    height: 100%;
+    background: #fafafa;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    .top {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      gap: 5px;
+      img {
+        width: 2rem;
+        height: 2rem;
+        object-fit: contain;
+      }
+      h4 {
+        color: #db0000;
+        font-size: 1.2rem;
+        text-align: center;
+      }
+    }
+    .menu {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      margin-top: 1rem;
+      .menu-item.active {
+        background: rgba(0, 0, 0, 1);
+        padding: 0.6rem;
+        border-radius: 5px;
+        display: flex;
+        gap: 10px;
+        align-items: center;
+        span {
+          background: $shade;
+          color: #ffff;
+          width: 1.5rem;
+          height: 1.5rem;
+          border-radius: 2px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+        .link {
+          color: #fff;
+          text-decoration: none;
+        }
+      }
+      .menu-item:hover {
+        background: rgba(0, 0, 0, 1);
+        .link {
+          color: #fff;
+        }
+        span {
+          background: $shade;
+          color: #ffff;
+        }
+      }
+      .menu-item {
+        padding: 0.6rem;
+        border-radius: 5px;
+        display: flex;
+        gap: 10px;
+        align-items: center;
+        span {
+          color: #6e6e6e;
+          width: 1.5rem;
+          height: 1.5rem;
+          border-radius: 2px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+        .link {
+          color: #727272;
+          text-decoration: none;
+        }
+      }
+    }
+  }
+  .d-right {
+    width: 85%;
+    height: 100%;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+
+    section.student {
+      width: 100%;
+      height: 100%;
+      .search-bar {
+        width: 100%;
+        display: flex;
+        input {
+          width: 50%;
+          padding: 0.5rem;
+          border-top-left-radius: 5px;
+          border-bottom-left-radius: 5px;
+          outline: none;
+          border: 1px solid #f0f0f0;
+        }
+        button {
+          padding: 0.5rem 0.8rem;
+          background: #db0000;
+          color: #fff;
+          border: none;
+          outline: none;
+          border-top-right-radius: 5px;
+          border-bottom-right-radius: 5px;
+          font-size: 1.1rem;
+        }
+      }
+      p.info-text {
+        color: #797979;
+        font-size: 0.9rem;
+        margin-top: 2px;
+        margin-left: 2px;
+      }
+      .wrapper {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        margin-top: 1rem;
+        .info-top {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          margin-bottom: 0.5rem;
+          p {
+            color: #797979;
+            font-size: 0.9rem;
+          }
+        }
+        .content-wrapper {
+          width: 100%;
+          height: fit-content;
+          max-height: calc(100% - 200px);
+          overflow: auto;
+
+          table {
+            width: 100%;
+            table-layout: fixed;
+            border-collapse: collapse;
+
+            thead {
+              width: 100%;
+              th {
+                padding: 0.5rem;
+                background: #fafafa;
+                text-align: left;
+                color: #5c5c5c;
+              }
+              th:nth-child(1) {
+                width: 130px;
+                border-top-left-radius: 5px;
+              }
+              th:nth-child(5) {
+                border-top-right-radius: 5px;
+                width: 150px;
+              }
+            }
+            tbody {
+              width: 100%;
+              tr {
+                td {
+                  padding: 0.5rem;
+                  border: 1px solid #f8f8f8;
+                  font-size: 0.9rem;
+                  color: #444444;
+                  line-height: 1.3rem;
+                  button {
+                    border: none;
+                    background: #eb0101;
+                    color: #ffffff;
+                    outline: none;
+                    padding: 0.2rem 0.4rem;
+                    border-radius: 4px;
+                    cursor: pointer;
+                  }
+                }
+              }
+            }
+          }
+        }
+        .content-wrapper::-webkit-scrollbar {
+          width: 10px;
+          background-color: #f5f5f5;
+        }
+        .content-wrapper::-webkit-scrollbar-thumb {
+          background-color: #dfdfdf;
+          border-radius: 5px;
+        }
+      }
+    }
+  }
+}
