--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -1,10 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Lato", sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 $shadow: 12px 12px 40px 0px rgba(0, 0, 0, 0.05);
@@ -297,8 +297,8 @@ header {
       .cl1 {
         width: 50%;
         h2 {
-          font-size: 2.5rem;
-          font-weight: 700;
+          font-size: 2.3rem;
+          font-weight: 600;
           display: flex;
           align-items: center;
           gap: 5px;
@@ -315,7 +315,7 @@ header {
       .cl2 {
         width: 50%;
         p {
-          color: #252525;
+          color: #474747;
           line-height: 1.3rem;
           text-align: justify;
           span {
@@ -374,6 +374,8 @@ header {
             color: #666666;
             text-align: justify;
             margin-top: 0.5rem;
+            font-weight: 400;
+            font-size: 1rem;
           }
           p.get {
             color: #666666;
@@ -547,8 +549,8 @@ header {
       .co1 {
         width: 50%;
         h2 {
-          font-size: 2.5rem;
-          font-weight: 700;
+          font-size: 2.3rem;
+          font-weight: 600;
           display: flex;
           align-items: center;
           gap: 5px;
@@ -565,7 +567,7 @@ header {
       .co2 {
         width: 50%;
         p {
-          color: #252525;
+          color: #444444;
           line-height: 1.3rem;
           text-align: justify;
           span {
@@ -1091,7 +1093,7 @@ header {
         width: 50%;
         h2 {
           font-size: 2.5rem;
-          font-weight: 700;
+          font-weight: 600;
           display: flex;
           align-items: center;
           gap: 5px;
@@ -1108,9 +1110,10 @@ header {
       .cl2 {
         width: 50%;
         p {
-          color: #252525;
+          color: #424242;
           line-height: 1.3rem;
           text-align: justify;
+          font-weight: 400;
           span {
             color: #db0000;
           }
@@ -1517,9 +1520,10 @@ section.certificate {
   width: 100%;
   padding: 10px 100px;
   min-height: 100vh;
+  overflow-x: hidden;
   h2 {
     color: #464646;
-    font-size: 2rem;
+    font-size: 1.8rem;
     margin-top: 1rem;
     span {
       color: #db0000;
@@ -1539,7 +1543,6 @@ section.certificate {
       width: 100%;
       display: flex;
       align-items: center;
-
       input {
         width: 100%;
         height: 50px;
@@ -1563,9 +1566,28 @@ section.certificate {
         gap: 5px;
         outline: none;
         border: none;
-        font-size: 1.2rem;
+        font-size: 1rem;
         border-top-right-radius: 5px;
         border-bottom-right-radius: 5px;
+      }
+    }
+    .display {
+      width: 100%;
+      margin-top: 1rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: fit-content;
+      .no {
+        width: 15rem;
+        height: 15rem;
+        object-fit: contain;
+      }
+      .cer {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 5px;
       }
     }
   }
@@ -1575,7 +1597,7 @@ section.certificate {
   section.certificate {
     padding: 10px;
     h2 {
-      font-size: 1.5rem;
+      font-size: 1.2rem;
     }
     .content {
       padding: 0;
@@ -1587,6 +1609,9 @@ section.certificate {
           min-width: 100px;
           height: 40px;
         }
+      }
+      .display {
+        height: fit-content;
       }
     }
   }
@@ -1741,7 +1766,7 @@ section.addmission {
     outline: none;
     box-shadow: $shadow;
     border-radius: 5px;
-    font-size: 1.1rem;
+    font-size: 1rem;
     margin-top: 1rem;
     cursor: pointer;
   }
@@ -1831,7 +1856,7 @@ section.products {
 
       .img-box {
         width: 100%;
-        height: 10rem;
+        height: 12rem;
         overflow: hidden;
         border-radius: 5px;
 
@@ -1848,7 +1873,7 @@ section.products {
         width: 100%;
         display: flex;
         padding: 0 0.5rem;
-        margin-top: 0.3rem;
+        margin-top: 0.5rem;
         span {
           width: 100%;
           display: flex;
@@ -2833,6 +2858,7 @@ section.gallery-admin {
     width: 100%;
     columns: 4;
     column-gap: 10px;
+
     .img-box {
       position: relative;
       width: 100%;
@@ -3163,4 +3189,91 @@ section.admin {
       }
     }
   }
+}
+
+section.login {
+  width: 100%;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  .login-wrap {
+    width: fit-content;
+    height: fit-content;
+    min-width: 500px;
+    border: 1px solid #ececec;
+    padding: 1rem;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    h2 {
+      color: #db0000;
+      font-size: 1.2rem;
+      margin-bottom: 0.5rem;
+    }
+    .group {
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+      margin-bottom: 0.5rem;
+      label {
+        color: #505050;
+        font-weight: 400;
+        font-size: 0.9rem;
+      }
+      input {
+        padding: 0.5rem;
+        border: 1px solid #f5f5f5;
+        border-radius: 5px;
+        outline: none;
+      }
+    }
+    button {
+      padding: 0.6rem;
+      border: none;
+      outline: none;
+      background: #db0000;
+      color: #fff;
+      cursor: pointer;
+      border-radius: 5px;
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  section.login {
+    padding: 1rem;
+    .login-wrap {
+      min-width: 100%;
+    }
+  }
+}
+
+.no-data {
+  width: 100%;
+  height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+  img {
+    width: 15rem;
+    height: 15rem;
+    object-fit: contain;
+  }
+  h4 {
+    color: #5c5c5c;
+    margin-left: 2rem;
+  }
+}
+
+.ant-skeleton.ant-skeleton-element {
+  width: 100% !important;
+  height: 10rem !important;
+}
+.ant-skeleton.ant-skeleton-active .ant-skeleton-image {
+  width: 100% !important;
+  height: 100% !important;
 }
