--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -11,6 +11,21 @@ $shadow: 12px 12px 40px 0px rgba(0, 0, 0, 0.05);
 $red: #db0000;
 $shade: linear-gradient(181deg, #f40000 1.09%, #f00 99.29%); //fill
 
+body::-webkit-scrollbar{
+  width:5px;
+  background: #e1e1e1;
+}
+body::-webkit-scrollbar-thumb{
+  background-color: #efefef;
+  border-radius: 1px;
+  width: 5px;
+}
+
+
+
+
+
+
 .swal2-confirm {
   background: $red !important;
   outline: none !important;
@@ -168,6 +183,9 @@ header {
   header {
     .left {
       width: 100%;
+      h4{
+        font-size: 1rem;
+      }
     }
     .right {
       display: none;
@@ -690,21 +708,25 @@ header {
             .course-card-body-first {
               width: 100%;
               display: flex;
-              align-items: center;
-              justify-content: space-between;
+              flex-direction: column;
+              gap: 5px;
               h4 {
-                font-size: 1rem;
+                font-size: 0.9rem;
                 color: #3d3d3d;
                 text-transform: capitalize;
                 text-overflow: ellipsis;
-                text-wrap: nowrap;
+                white-space: nowrap;
+                overflow: hidden;
               }
               h2 {
                 display: flex;
                 color: #db0000;
-                font-size: 1rem;
+                font-size: 0.9rem;
                 font-weight: 900;
                 align-items: center;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+                overflow: hidden;
               }
             }
             p {
@@ -1636,11 +1658,26 @@ section.certificate {
         height: 15rem;
         object-fit: contain;
       }
-      .cer {
+      .certificate-image {
         width: 100%;
         height: 100%;
-        object-fit: cover;
-        border-radius: 5px;
+
+        .cer {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          border-radius: 5px;
+        }
+        button {
+          box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+          background: #db0000;
+          color: #fff;
+          padding: 0.5rem;
+          border: none;
+          outline: none;
+          border-radius: 3px;
+          cursor: pointer;
+        }
       }
     }
   }
@@ -1705,7 +1742,20 @@ section.gallery {
         border-radius: 5px;
         transition: all 0.5s ease-in-out;
       }
-
+      .download-icon {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        width: 1.5rem;
+        height: 1.5rem;
+        background: rgba(0, 0, 0, 0.5);
+        color: #fff;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+      }
       .caption {
         width: 100%;
         background: rgba(0, 0, 0, 0.247);
@@ -1960,18 +2010,24 @@ section.products {
         .product-card-body-first {
           width: 100%;
           display: flex;
-          justify-content: space-between;
-          align-items: center;
+          flex-direction: column;
+          gap: 5px;
           h4 {
             color: #464646;
-            font-size: 1rem;
+            font-size: 0.9rem;
             text-transform: capitalize;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
           }
           h2 {
-            font-size: 1rem;
+            font-size: 0.9rem;
             color: #db0000;
             display: flex;
             align-items: center;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
             i {
               height: 100%;
             }
@@ -2343,18 +2399,27 @@ section.dashboard {
                   font-size: 0.9rem;
                   color: #444444;
                   line-height: 1.3rem;
-
+                  text-overflow: ellipsis;
+                  white-space: nowrap;
+                  overflow: hidden;
+                  a {
+                    text-decoration: none;
+                    color: #db0000;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
+                    overflow: hidden;
+                  }
                   span {
                     cursor: pointer;
                   }
                 }
-                td.adm{
+                td.adm {
                   display: flex;
                   flex-direction: column;
-                  span{
+                  span {
                     font-weight: 500;
                   }
-                  span:last-child{
+                  span:last-child {
                     font-size: 0.8rem;
                     font-weight: 400;
                   }
@@ -3503,33 +3568,32 @@ section.news {
   }
 }
 
-
-.link-content{
-  li{
+.link-content {
+  li {
     list-style: none;
     padding: 5px 10px;
     border-radius: 3px;
     margin-bottom: 5px;
     font-size: 0.85rem;
-    .link{
+    .link {
       color: #616161;
       text-decoration: none;
     }
-    .link:hover{
+    .link:hover {
       color: #db0000;
       background: #fafafa;
     }
   }
-  li:hover{
+  li:hover {
     background: #fafafa;
   }
 }
 
-.addmission-msg{
+.addmission-msg {
   border: 1px solid #e5e5e5;
   padding: 1rem;
   border-radius: 5px;
-  h5{
+  h5 {
     margin: 0.5rem;
     font-weight: 600;
     color: #db0000;
@@ -3537,20 +3601,110 @@ section.news {
     font-size: 1.2rem;
     margin-bottom: 1rem;
   }
-  p{
+  p {
     font-size: 0.9rem;
     line-height: 1.3rem;
     margin: 0;
     padding: 0;
-    b{
+    b {
       font-weight: 600;
     }
   }
-  .flow{
+  .flow {
     display: flex;
     flex-direction: column;
     color: #656565;
     font-size: 0.9rem;
     line-height: 1.2rem;
+  }
+}
+
+
+section.exam{
+  width: 100%;
+  height: 100%;
+  padding: 10px 100px;
+h2{
+  color: #252525;
+  font-size: 1.5rem;
+  margin-top: 1rem;
+  margin-bottom: 5px;
+  span{
+    color: #db0000;
+  }
+}
+  p {
+    color: #525252;
+    line-height: 1rem;
+    text-align: justify;
+    font-size: 0.8rem;
+  }
+  .exam-search{
+    width: 100%;
+    margin-top: 1rem;
+    display: flex;
+    align-items: center;
+    input{
+      padding: 0.5rem;
+      color: #3d3d3d;
+      border: 1px solid #e4e4e4;
+      outline: none;
+      border-radius: 5px;
+      width: 250px;
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+      border-right: none;
+    }
+    button{
+      padding: 0.5rem;
+      border: none;
+      outline: none;
+      background-color: #db0000;
+      color: #fff;
+      border-top-right-radius: 5px;
+      border-bottom-right-radius: 5px;
+      border: 1px solid #db0000;
+      cursor: pointer;
+    }
+  }
+  .exam-wrapper{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 1rem;
+    .exam-card{
+      width: 100%;
+      border: 1px solid #e4e4e4;
+      padding: 1rem;
+      border-radius: 5px;
+      
+      h2{
+        margin-top: 0;
+        font-size: 1rem;
+      }
+      p{
+        font-size: 0.8rem;
+      }
+      button{
+        margin-top: 0.5rem;
+        border: none;
+        outline: none;
+        color: #fff;
+        background: #db0000;
+        padding: 5px 8px;
+        border-radius: 3px;
+        font-size: 0.8rem;
+        font-weight: 600;
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+        cursor: pointer;
+      }
+    }
+  
+  }
+}
+
+@media(max-width:900px){
+  section.exam{
+    padding: 10px;
   }
 }
